--- a/index.html
+++ b/index.html
@@ -77,26 +77,26 @@
 
                     <div class=" col-xs-5 col-sm-5 col-md-5 col-lg-5" style="width:calc(100%/5);">
                         <p class="member-name">G-Dragon</p>
-                        <img src="/assets/img/g-dragon.png" height="100%" alt="Name" class="member-img" />
+                        <img src="./assets/img/g-dragon.png" height="100%" alt="Name" class="member-img" />
                     </div>
 
                     <div class="column-main col-xs-5 col-sm-5 col-md-5 col-lg-5" style="width:calc(100%/5);">
                         <p class="member-name">Teayang</p>
-                        <img src="/assets/img/tae-yang.jpg" height="100%" alt="Name" class="member-img" />
+                        <img src="./assets/img/tae-yang.jpg" height="100%" alt="Name" class="member-img" />
                     </div>
 
                     <div class="column-main col-xs-5 col-sm-5 col-md-5 col-lg-5" style="width:calc(100%/5);">
                         <p class="member-name">Daesung</p>
-                        <img src="/assets/img/daesung-big-bang-1680507425263564409304.webp" height="100%" alt="Name"
+                        <img src="./assets/img/daesung-big-bang-1680507425263564409304.webp" height="100%" alt="Name"
                             class="member-img" />
                     </div>
                     <div class="column-main col-xs-5 col-sm-5 col-md-5 col-lg-5" style="width:calc(100%/5);">
                         <p class="member-name">Seung Ri</p>
-                        <img src="/assets/img/seungri-2.jpg" height="100%" alt="Name" class="member-img" />
+                        <img src="./assets/img/seungri-2.jpg" height="100%" alt="Name" class="member-img" />
                     </div>
                     <div class="column-main col-xs-5 col-sm-5 col-md-5 col-lg-5" style="width:calc(100%/5);">
                         <p class="member-name">T.O.P</p>
-                        <img src="/assets/img/T.O.P.png" height="100%" alt="Name" class="member-img" />
+                        <img src="./assets/img/T.O.P.png" height="100%" alt="Name" class="member-img" />
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                     <!-- Places -->
                     <div class="row places-list">
                         <div class="col col-third mt-16 s-col-full">
-                            <img src="/assets/img/concert 1.jpg" width="100%" alt="New York" class="place-img">
+                            <img src="./assets/img/concert 1.jpg" width="100%" alt="New York" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Want You Tour</h3>
                                 <p class="place-heading">Place:Incheon,Deagu Busan</p>
@@ -137,7 +137,7 @@
                         </div>
 
                         <div class="col col-third mt-16 s-col-full">
-                            <img src="/assets/img/concert 2-22i.jpg" width="100%" alt="Paris" class="place-img">
+                            <img src="./assets/img/concert 2-22i.jpg" width="100%" alt="Paris" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Big Show 2009</h3>
                                 <h3 class="place-heading">Place: Seoul</h3>
@@ -152,7 +152,7 @@
                         </div>
 
                         <div class="col col-third mt-16 s-col-full">
-                            <img src="/assets/img/electric.png" width="100%" alt="San Francisco" class="place-img">
+                            <img src="./assets/img/electric.png" width="100%" alt="San Francisco" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Electric Love</h3>
                                 <h3 class="place-heading">Place: Japan</h3>
@@ -221,7 +221,7 @@
             <!-- End Contect section -->
 
             <div class="map-section">
-                <img src="/assets/img/still_alive.jpg" alt="Map">
+                <img src="./assets/img/still_alive.jpg" alt="Map">
             </div>
         </div>
 
